Fixed alignment issues on the toolbar

--- a/wmd.css
+++ b/wmd.css
@@ -53,9 +53,10 @@
 {
 	width: 1px; 
 	height: 20px; 
-	margin-left: 14px;
+	margin-left: 7px;
+	margin-right:7px;
 	
-	position: absolute;
+	position: relative;
 	background-color: Silver;
 	display: inline-block; 
 	list-style: none;
@@ -89,22 +90,22 @@
 
 
 /* sprite button slicing style information */
-.wmd-bold-button    {left: 0px;   background-position: 0px 0;}
-.wmd-italic-button  {left: 25px;  background-position: -20px 0;}
-.wmd-spacer1        {left: 50px;}
-.wmd-link-button    {left: 75px;  background-position: -40px 0;}
-.wmd-quote-button   {left: 100px;  background-position: -60px 0;}
-.wmd-code-button    {left: 125px;  background-position: -80px 0;}
-.wmd-image-button   {left: 150px;  background-position: -100px 0;}
-.wmd-spacer2        {left: 175px;}
-.wmd-olist-button   {left: 200px;  background-position: -120px 0;}
-.wmd-ulist-button   {left: 225px; background-position: -140px 0;}
-.wmd-heading-button {left: 250px; background-position: -160px 0;}
-.wmd-hr-button      {left: 275px; background-position: -180px 0;}
-.wmd-spacer3        {left: 300px;}
-.wmd-undo-button    {left: 325px; background-position: -200px 0;}
-.wmd-redo-button    {left: 350px; background-position: -220px 0;}
-.wmd-help-button    {right: 0px; background-position: -240px 0;}
+.wmd-bold-button    {background-position: 0px 0;}
+.wmd-italic-button  {background-position: -20px 0;}
+.wmd-spacer1        {}
+.wmd-link-button    {background-position: -40px 0;}
+.wmd-quote-button   {background-position: -60px 0;}
+.wmd-code-button    {background-position: -80px 0;}
+.wmd-image-button   {background-position: -100px 0;}
+.wmd-spacer2        {}
+.wmd-olist-button   {background-position: -120px 0;}
+.wmd-ulist-button   {background-position: -140px 0;}
+.wmd-heading-button {background-position: -160px 0;}
+.wmd-hr-button      {background-position: -180px 0;}
+.wmd-spacer3        {}
+.wmd-undo-button    {background-position: -200px 0;}
+.wmd-redo-button    {background-position: -220px 0;}
+.wmd-help-button    {position:absolute;right: 0px; background-position: -240px 0;}
 
 
 .wmd-prompt-background
